--- a/story.html
+++ b/story.html
@@ -11,10 +11,10 @@
       </div>
       <div class = "publishtime">
         <p> <b>Published June 24, 2011</b> </p>
-        <p> OMAHA, NE — According to FBI sources, the nonprofit media watchdog group Americans for Fairness in Awarding Journalism Prizes, or AFAJP, was ordered to cease operations Friday after its spokesman and president, Stephen Forbeck, was indicted on 24 counts of embezzlement, fraud, and money-laundering.</p>
+        <p> OMAHA, NE — According to FBI <a href="url">https://www.fbi.gov</a> sources, the nonprofit media watchdog group Americans for Fairness in Awarding Journalism Prizes, or AFAJP, was ordered to cease operations Friday after its spokesman and president, Stephen Forbeck, was indicted on 24 counts of embezzlement, fraud, and money-laundering.</p>
 <p>“Over the past 20 years, Mr. Forbeck—aka Thomas Porter, aka Richard Vernon, aka Israel Greenburg, and the list goes on—has gone from media organization to media organization, tricking them all into thinking he could get them the awards they deserve, all while illegally appropriating tens of million dollars in supporter donations for his own personal use,” lead investigator Paul Coughlin told reporters from outside AFAJP’s main office. </p>
 <p> The office, aside from a dozen phones and random sheets of paper strewn across the floor, was completely deserted prior to the FBI raid.</p>
 <p> “Mr. Forbeck remains at-large at this time. And we’d like to inform all media organizations, especially desperate ones, that as impressive as Mr. Forbeck’s credentials sound, there is no such thing as a J.D. in Journalism Award Giving and Award Law.”</p>
-<p> At press time, security cameras at Los Angeles International Airport captured an image of a figure resembling Forbeck boarding a flight to Barbados.</p>
+<p> At press time, security cameras at Los Angeles International Airport <a href="url"> https://www.flylax.com</a>captured an image of a figure resembling Forbeck boarding a flight to Barbados. <a href="url">https://en.wikipedia.org/wiki/Barbados</a></p>
   <body>
     </body
