--- a/story.html
+++ b/story.html
@@ -6,6 +6,7 @@
     <title>Media Watchdog Spokesman Sought On Embezzlement Charges</title>
     <h1>Media Watchdog Spokesman Sought On Embezzlement Charges</h1>
     <div class= "container">
+      <img src= "http://i.onionstatic.com/onion/1560/4/16x9/600.jpg">
       <div class= "byline">
         <p> <strong>By Onion Staff</strong> </p>
       </div>
