added container div

--- a/author.html
+++ b/author.html
@@ -5,4 +5,4 @@
   </head>
     <title>Bob Woodward author profile </title>
     <h1>Bob Woodward author profile </h1>
-    
+    <div class= "container">
