--- a/author.html
+++ b/author.html
@@ -6,3 +6,17 @@
     <title>Bob Woodward author profile </title>
     <h1>Bob Woodward author profile </h1>
     <div class= "container">
+      <h2>Author profile: Bob Woodward</h2>
+
+Bob Woodward is an associate editor at The Washington Post, where he has worked since 1971.
+
+Most popular articles by Bob Woodward:
+The Ben Bradlee we knew
+GOP Security Aide Among Five Arrested in Bugging Affair
+How Mark Felt Became ‘Deep Throat’
+
+Popular books by Bob Woodward:
+All The President's Men, 1974
+The Final Days, 1976
+Plan of Attack, 2004
+The Last of the President's Men, 2015
