added paragraph and italics tag

--- a/author.html
+++ b/author.html
@@ -8,7 +8,7 @@
     <div class= "container">
       <h2>Author profile: Bob Woodward</h2>
 
-Bob Woodward is an associate editor at The Washington Post, where he has worked since 1971.
+<p>Bob Woodward is an associate editor at<i> The Washington Post</i>, where he has worked since 1971.</p>
 
 Most popular articles by Bob Woodward:
 The Ben Bradlee we knew
