--- a/author.html
+++ b/author.html
@@ -10,13 +10,15 @@
 
 <p>Bob Woodward is an associate editor at<i> The Washington Post</i>, where he has worked since 1971.</p>
 
-Most popular articles by Bob Woodward:
-The Ben Bradlee we knew
-GOP Security Aide Among Five Arrested in Bugging Affair
-How Mark Felt Became ‘Deep Throat’
+<ol>Most popular articles by Bob Woodward:
+<li>The Ben Bradlee we knew</li>
+<li>GOP Security Aide Among Five Arrested in Bugging Affair</li>
+<li>How Mark Felt Became ‘Deep Throat’</li>
+</ol>
 
-Popular books by Bob Woodward:
-All The President's Men, 1974
-The Final Days, 1976
-Plan of Attack, 2004
-The Last of the President's Men, 2015
+<ul>Popular books by Bob Woodward:
+<li>All The President's Men, 1974</li>
+<li>The Final Days, 1976</li>
+<li>Plan of Attack, 2004</li>
+<li>The Last of the President's Men, 2015</li>
+</ul>
