--- a/author.html
+++ b/author.html
@@ -10,13 +10,13 @@
 
 <p>Bob Woodward is an associate editor at<i> The Washington Post</i>, where he has worked since 1971.</p>
 
-<ol>Most popular articles by Bob Woodward:
+<ol> <h4> Most popular articles by Bob Woodward:</h4>
 <li>The Ben Bradlee we knew</li>
 <li>GOP Security Aide Among Five Arrested in Bugging Affair</li>
 <li>How Mark Felt Became ‘Deep Throat’</li>
 </ol>
 
-<ul>Popular books by Bob Woodward:
+<ul> <h4>Popular books by Bob Woodward:</h4>
 <li>All The President's Men, 1974</li>
 <li>The Final Days, 1976</li>
 <li>Plan of Attack, 2004</li>
