--- a/author.html
+++ b/author.html
@@ -10,12 +10,14 @@
 
 <p>Bob Woodward is an associate editor at<i> The Washington Post</i>, where he has worked since 1971.</p>
 
-<ol> <h4> Most popular articles by Bob Woodward:</h4>
+<div class="left-column">
+  <ol> <h4> Most popular articles by Bob Woodward:</h4>
 <li>The Ben Bradlee we knew <a href="url">http://www.washingtonpost.com/lifestyle/style/the-ben-bradlee-we-knew-friend-fierce-editor-and-a-truth-seeker-above-all/2014/10/28/c565eb86-5df1-11e4-9f3a-7e28799e0549_story.html</a></li>
 <li>GOP Security Aide Among Five Arrested in Bugging Affair <a href="url">https://www.washingtonpost.com/politics/gop-security-aide-among-five-arrested-in-bugging-affair/2012/06/07/gJQAYTdzKV_story.html</a></li>
 <li>How Mark Felt Became ‘Deep Throat’<a href="url">https://www.washingtonpost.com/59418efe-ae91-11e1-a163-d43a3ca733b4_story.html?utm_term=.db13f77bc7ad</a></li>
+</div>
 </ol>
-
+<div class="right=column">
 <ul> <h4>Popular books by Bob Woodward:</h4>
 <li>All The President's Men, 1974</li>
 <li>The Final Days, 1976</li>
