used bitly on links to fix spacing

--- a/author.html
+++ b/author.html
@@ -12,9 +12,9 @@
 
 <div class="left-column">
   <ol> <h4> Most popular articles by Bob Woodward:</h4>
-<li>The Ben Bradlee we knew <a href="url">http://www.washingtonpost.com/lifestyle/style/the-ben-bradlee-we-knew-friend-fierce-editor-and-a-truth-seeker-above-all/2014/10/28/c565eb86-5df1-11e4-9f3a-7e28799e0549_story.html</a></li>
-<li>GOP Security Aide Among Five Arrested in Bugging Affair <a href="url">https://www.washingtonpost.com/politics/gop-security-aide-among-five-arrested-in-bugging-affair/2012/06/07/gJQAYTdzKV_story.html</a></li>
-<li>How Mark Felt Became ‘Deep Throat’<a href="url">https://www.washingtonpost.com/59418efe-ae91-11e1-a163-d43a3ca733b4_story.html?utm_term=.db13f77bc7ad</a></li>
+<li>The Ben Bradlee we knew <a href="url">http://wapo.st/1rS22O3</a></li>
+<li>GOP Security Aide Among Five Arrested in Bugging Affair <a href="url">http://wapo.st/2I26rxT</a></li>
+<li>How Mark Felt Became ‘Deep Throat’<a href="url">http://wapo.st/2oKTUXn</a></li>
 </div>
 </ol>
 <div class="right=column">
